--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,3 +34,24 @@ spring:
           auth: true
           starttls:
             enable: true
+            
+---
+
+
+spring:
+  profiles: local
+server:
+  port: 8086
+
+---
+
+# 운영환경만의 설정
+spring:
+  profiles: production
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/cuni?autoReconnect=true&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+    username: sbsst
+    password: sbs123414
+server:
+  port: 8087
